--- a/MovieShopMVC/Views/Movies/Details.cshtml
+++ b/MovieShopMVC/Views/Movies/Details.cshtml
@@ -1,3 +1,8 @@
-﻿<h1>
-    Movie Details Page, TODO
+﻿@model ApplicationCore.Models.MovieDetailsModel
+
+<h1>
+    @Model.Title
 </h1>
+<h3>
+    @Model.Overview
+</h3>
