Added cast view

--- a/MovieShopMVC/Views/Movies/Details.cshtml
+++ b/MovieShopMVC/Views/Movies/Details.cshtml
@@ -37,24 +37,26 @@
                 </div>
                 <br>
                 <div class="row" style="margin-left:15px;margin-right:15px">
-                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">BUY $@Model.Price</button>
+                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#purchaseModal">BUY $@Model.Price</button>
                     <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                      <div class="modal-dialog">
-                        <div class="modal-content">
-                          <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                          </div>
-                          <div class="modal-body">
-                            ...
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
-                          </div>
+                    <div class="modal fade" id="purchaseModal" tabindex="-1" aria-labelledby="purchaseModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="ConfirmationModalLabel">Confirmation</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <h4>Please confirm your purchase</h4>
+                                    <h6>@Model.Title</h6>
+                                    <h6>@Model.Price</h6>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
                         </div>
-                      </div>
                     </div>
                 </div>
             </div>
@@ -126,22 +128,25 @@
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-2">
-                        <img src="@cast.ProfilePath" alt="Paris" width="50" height="60" style="border-radius:50%; margin-bottom:15px;">
-                    </div>
-                    <div class="col-5">
-                        @cast.Name
-                    </div>
-                    <div class="col-5">
-                        @cast.Character
-                    </div>
-                    <br><hr>
+                            <div>
+                                <a asp-controller="Casts" asp-action="Details" asp-route-id="@cast.Id">
+                                    <img src="@cast.ProfilePath" class="img-fluid" alt="@cast.Name" width="50" height="60" style="border-radius:50%; margin-bottom:15px;" />
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-5">
+                            @cast.Name
+                        </div>
+                        <div class="col-5">
+                            @cast.Character
+                        </div>
+                        <br><hr>
                     </div>
                 </li>
             </ul>
         }
     </div>
 </div>
-
 
 
 
