--- a/MovieShopMVC/Views/Casts/Details.cshtml
+++ b/MovieShopMVC/Views/Casts/Details.cshtml
@@ -3,12 +3,12 @@
 <div class="container text-center">
     <div class="row">
         <div class="col-4">
-            <img src="@Model.ProfilePath" class="img-fluid" alt="@Model.Name">
+            <img src="@Model.ProfilePath" class="img-fluid" alt="@Model.Name" width="200">
         </div>
         <div class="col">        
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">@Model.Name</li>
-                <li class="list-group-item">@Model.Character</li>
+                <li class="list-group-item"><h3>@Model.Name</h3></li>
+                <li class="list-group-item"><h3>@Model.Character??</h3></li>
             </ul>
         </div>
     </div>
