--- a/MovieShopMVC/Views/Casts/Details.cshtml
+++ b/MovieShopMVC/Views/Casts/Details.cshtml
@@ -8,7 +8,8 @@
         <div class="col">        
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><h3>@Model.Name</h3></li>
-                <li class="list-group-item"><h3>@Model.Character??</h3></li>
+                <li class="list-group-item"><h3>@Model.Gender</h3></li>
+                <li class="list-group-item">...</li>
             </ul>
         </div>
     </div>
