--- a/MovieShopMVC/Views/Movies/MoviesByGenre.cshtml
+++ b/MovieShopMVC/Views/Movies/MoviesByGenre.cshtml
@@ -19,5 +19,5 @@
     var nextDisabled = !Model.HasNextPage ? "disabled" : "";
 }
 
-<a asp-action="GenreMovies" asp-route-page="@(Model.PageIndex-1)" class="btn btn-primary @prevDisabled"> Previous </a>
-<a asp-action="GenreMovies" asp-route-page="@(Model.PageIndex+1)" class="btn btn-primary @nextDisabled"> Next </a>
+<a asp-action="MoviesByGenre" asp-route-page="@(Model.PageIndex-1)" class="btn btn-primary @prevDisabled"> Previous </a>
+<a asp-action="MoviesByGenre" asp-route-page="@(Model.PageIndex+1)" class="btn btn-primary @nextDisabled"> Next </a>
