--- a/MovieShopMVC/Views/User/Favorites.cshtml
+++ b/MovieShopMVC/Views/User/Favorites.cshtml
@@ -1,1 +1,13 @@
-﻿
+﻿@model List<ApplicationCore.Models.MovieCardModel>
+
+<div class="container-fluid">
+    <div class="row">
+        @foreach (var movieCard in Model)
+        {
+            <div class="col-xl-2 col-sm-4 col-lg-3 col-6">
+                <partial name="_MovieCard" model="@movieCard" style="margin-bottom:0" />
+            </div>
+        }
+    </div>
+</div>
+
