--- a/MovieShopMVC/Views/Shared/_LoginInfoPartial.cshtml
+++ b/MovieShopMVC/Views/Shared/_LoginInfoPartial.cshtml
@@ -13,7 +13,7 @@
                 <a class="dropdown-item" asp-controller="User" asp-action="purchases"> Purchases </a>
                 <a class="dropdown-item" asp-controller="User" asp-action="favorites"> Favorites </a>
                 <a class="dropdown-item" asp-controller="User" asp-action="EditProfile"> EditProfile </a>
-                <a class="dropdown-item" asp-controller="User" asp-action="Logout"> Logout </a>
+                <a class="dropdown-item" asp-controller="Account" asp-action="Logout"> Logout </a>
             </div>
         </li>
 
